syntax = "proto3";

package feeprofile;

option go_package = "github.com/meshtrade/api/go/instrument/feeprofile";

import "instrument/feeprofile/lifecycleEventCalculationConfigAmount.proto";
import "instrument/feeprofile/lifecycleEventCalculationConfigRate.proto";

/*
LifecycleEventCalculationConfig is the calculation configuration that is use to calculate
the Fee amount.

@bson-marshalled
*/
message LifecycleEventCalculationConfig {
    oneof LifecycleEventCalculationConfig {
        feeprofile.AmountLifecycleEventCalculationConfig amountLifecycleEventCalculationConfig = 1;
        feeprofile.RateLifecycleEventCalculationConfig rateLifecycleEventCalculationConfig = 2;
    }
}